Burger-review/src/App.css
.App {
  text-align: center;
  /* background-color: lightgrey; */
}


.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}
#main-burger{
  max-width: 45%;
  max-height: 45%;
  border-radius: 100%;
  animation: App-logo-spin infinite 10s linear;
}
#bdiv{
  text-align: center;
  position: static;
  max-height: 100%;
  min-height: 100%;
  background-color: #282c34;

  /* height: 100%; */
}

#test {
  background-color: lightgrey;
}
/* #top-bar {
  background-color: red;
  height: 60px;
  margin: 0;
  
  
} */
#footer {
  background-color:black;
  margin-top: 150px;
  height: 58px;
}
/* #hr {
  margin: 0;
} */
#navbar {
background-color: grey;
margin: 0;
}

